# HimmiRouter

./: .env.example  .env.production  .gitignore  Justfile  README.md  docker-compose.dev.yml  main.py  pyproject.toml  report.md  sdk_demo.py
apps/dashboard-frontend/: package.json
apps/dashboard-frontend/specs/: openapi-control.json  openapi-gateway.json
apps/dashboard-frontend/src/: App.tsx  index.css
apps/dashboard-frontend/src/client-control/: index.ts
apps/dashboard-frontend/src/client-control/models/: AuthRequest.ts  CompanyResponse.ts  MappingResponse.ts  ModelResponse.ts  PreferenceRequest.ts  ProviderKeyRequest.ts
apps/dashboard-frontend/src/client-control/services/: DefaultService.ts
apps/dashboard-frontend/src/client-gateway/: index.ts
apps/dashboard-frontend/src/client-gateway/models/: ChatRequest.ts
apps/dashboard-frontend/src/client-gateway/services/: DefaultService.ts
apps/dashboard-frontend/src/components/: layout.tsx
apps/dashboard-frontend/src/components/ui/: badge.tsx  button.tsx  input.tsx  tabs.tsx
apps/dashboard-frontend/src/lib/: auth.ts
apps/dashboard-frontend/src/pages/: auth.tsx  dashboard.tsx  models.tsx  playground.tsx  settings.tsx
docs/: architecture.md  report.md
docs/context/: agents.md  memory.md  progress.md  rules.md  scratchpad.md
scripts/: test_model_connectivity.py  update_models_feb2026.sql  update_models_feb2026_v2.sql  update_models_full_feb2026.sql
services/control_plane/: main.py  pyproject.toml
services/control_plane/src/control_plane/: main.py
services/inference_gateway/: pyproject.toml
services/inference_gateway/src/inference_gateway/: main.py  mcp_server.py  router.py
tests/: conftest.py
tests/integration/: test_auth.py  test_inference.py  test_streaming.py
