[project]
name = "himmirouter"
version = "0.1.0"
description = "Tier-1 Engineering Port of OpenRouter to Python"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.uv.workspace]
members = [
    "services/control_plane",
    "services/inference_gateway",
    "packages/database",
    "packages/shared",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "C4", "UP"]
ignore = []

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests", "services/*/tests", "packages/*/tests"]
