[project]
name = "openrouter-python"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "ruff>=0.6.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "control-plane",
    "inference-gateway",
    "database",
    "shared",
]

[tool.uv]
workspace = { members = ["services/*", "packages/*"] }

[tool.uv.sources]
control-plane = { workspace = true }
inference-gateway = { workspace = true }
database = { workspace = true }
shared = { workspace = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_test_loop_scope = "session"
pythonpath = ["services/control_plane/src", "services/inference_gateway/src", "packages/database/src", "packages/shared/src"]

[tool.ruff]
line-length = 88
target-version = "py312"
