[project]
name = "inference-gateway"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.27.1",
    "langgraph>=0.2.0",
    "litellm>=1.40.0",
    "database",
    "shared",
]

[tool.uv.sources]
database = { workspace = true }
shared = { workspace = true }
