[project]
name = "inference-gateway"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.8",
    "uvicorn>=0.34.0",
    "langgraph>=0.2.74",
    "litellm>=1.61.12",
    "database",
    "mcp[sse]>=1.2.0",
    "shared",
]

[tool.uv.sources]
database = { workspace = true }
shared = { workspace = true }
